<resources>
    <string name="app_name">Cualivy</string>
    <string name="scan_your_cv">Submit Your CV</string>
    <string name="copyright">v0.01</string>
    <string name="gallery">Choose From Gallery</string>
    <string name="Scan">Camera</string>
    <string name="intro">Find your job with upload or scan your resume.</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="login_page">Please fill the form to continue.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="email">Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account? Register </string>
    <string name="create_new_account">Create New Account</string>
    <string name="intro_register_page">Please fill this form before continue</string>
    <string name="not_permission">Don\'t have permission</string>
    <string name="preview_camera">Preview Your CV</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_process">Process</string>
    <string name="btn_rescan">Rescan</string>
    <string name="btn_gallery_again"> Choose From Gallery Again</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Fullname</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="happy_to_see_you">We happy to see you again. To use your account, you should sign in first.</string>
    <string name="please_fill">Please fill the form to continue.</string>
    <string name="have_account">Have an account? Login</string>
    <string name="empty_email">Enter Email</string>
    <string name="empty_name">Enter Name</string>
    <string name="empty_password">Enter Password</string>
    <string name="list_job">List Job</string>
    <string name="related_jobs">Related Jobs</string>
    <string name="keterangan">This related job for your CV, Good Luck.</string>
    <string name="submit_your_resume">Submit your Resume</string>
    <string name="connect">We will connect with available job vacancy</string>
    <string name="started">Get Started</string>
    <string name="wait">Wait, we will process your CV</string>
    <string name="apply">Apply Now</string>
    <string name="setting">Setting</string>
    <string name="additional_information">Additional Information</string>
</resources>